[package]
name = "k5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.14.0"
clap = { version = "3.1.6", features = ["derive"] }
codegen = { path = "../codegen" }
color-eyre = "0.5"
colored = "2"
config = { version = "0.11", default-features = false, features = ["toml"] }
goblin = "0.5"
probe-rs = "0.13"
probe-rs-cli-util = { version = "0.13", default-features = false, features=["anyhow"] }
probe-rs-rtt = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
srec = "0.2"
kdam = "0.1"
object = { version = "0.27", default-features = false }
defmt-decoder = { version = "=0.3.2", features = ["unstable"] }
pathdiff = "0.2.0"
