[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cortex_m"]
riscv = []
cortex_m = ["rtt-target"]
std = []

[dependencies]
abi = { path = "../abi" }
cortex-m = "0.7"
cordyceps = { version = "0.3", features = ["no-cache-pad"]}
heapless = "0.7"
rtt-target = { git = "https://github.com/mvirkkunen/rtt-target.git", features = ["cortex-m"], optional =true }

[build-dependencies]
codegen = { path =  "../codegen" }
