[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rv64"]
rv64 = ["riscv"]
cortex_m = ["rtt-target", "cortex-m"]
std = []

[dependencies]
abi = { path = "../abi" }
cordyceps = { version = "0.3", features = ["no-cache-pad"]}
heapless = "0.7"
enumflags2 = "0.7"
defmt = { version = "0.3", features = ["encoding-raw"] }

# cortex-m
cortex-m = { version =  "0.7", optional = true }
rtt-target = { git = "https://github.com/mvirkkunen/rtt-target.git", features = ["cortex-m"], optional =true }

# riscv
riscv = { version =  "0.8", optional = true }

[build-dependencies]
codegen = { path =  "../codegen" }
