[package]
name = "d1-kern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { version = "0.8.0", git = "https://github.com/rust-embedded/riscv" }
riscv-rt = "0.9.0"
d1-pac = "0.0.24"
panic-halt = "0.2.0"
