[package]
authors = ["Sascha Wise <me@saschawise.com>"]
edition = "2018"
readme = "README.md"
name = "stm32u5"
version = "0.1.0"

[dependencies]
alloc-cortex-m = { git = "https://github.com/sphw/alloc-cortex-m.git", branch = "m10" }
cortex-m = "0.7"
cortex-m-rt = "0.7"
kernel = { path = "../../kernel" }
abi = { path = "../../abi" }

[build-dependencies]
codegen = { path =  "../../codegen" }

[[bin]]
name = "stm32u5"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[patch.crates-io]
cortex-m = { git = "https://github.com/sphw/cortex-m.git", branch = "feature/add-itns-nvic" }
